--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Prashant's Portfolio</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link rel="icon" href="https://s3.amazonaws.com/jigyaasa_content_static/25231_000wQS.png" type="image/png">
+    <link rel="icon" href="../src/static/prashant1.png" type="image/png">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..500&display=swap" rel="stylesheet" />
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" referrerpolicy="no-referrer" rel="stylesheet" />
